# cation-engine

./: .gitignore  CLAUDE.md  CLAUDE.md.old  CLAUDE_SUPERVISOR.md  CMakeLists.txt  COMPLETE_FIX.md  CRITICAL ISSUE.md  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.win  PHYSICS.md  README.md  RELEASES.md  RELEASE_NOTES_v1.md  UI_IMPLEMENTATION_SUMMARY.md  build.sh  build_msvc.bat  build_validation.sh  build_windows.sh  cation_engine_main  cation_engine_test  cation_engine_validation  debug_calculation  debug_calculation.cpp  debug_calculation2  debug_ionic  debug_ionic.cpp  debug_no_ionic.cpp  debug_no_protonation  debug_no_protonation.cpp  debug_protonation  ligand_data.csv  ligand_info.md  ligands.csv  ligands2.csv  main.cpp  main_old.cpp  metals.csv  project description.docx  project description.txt  (+9 more)
.claude/: settings.local.json
.claude/skills/: equilibrium-solver.md  reverse-engineer.md  scientific-verification.md
.debug/: debug_calculation2.cpp  debug_const  debug_constants.cpp  debug_ionic2  debug_ionic2.cpp  debug_no_ionic  debug_protonation.cpp
.github/workflows/: release.yml
build-win/: CMakeCache.txt
build_win/: CMakeCache.txt
docs/: CONSTANTS_LOG.md  P0_API_UNIFICATION_SUMMARY.md  P0_P1_COMPLETION_REPORT.md  P0_P1_P2_FINAL_REPORT.md  P2_PHYSIOLOGICAL_CORRECTIONS.md  P2_STATUS_REVISED.md  P3_7Cation_solver.md  RELEASE_NOTES_v1.md
include/: CationEngine.h  Constants.h  Ligand.h  LigandCSVLoader.h  Solver.h
legacy_code/WebMaxC/: WEBMAXC Extended.html  WEBMAXC STANDARD.html
legacy_code/WinCabuf/: ligands.ass  ligands.md
legacy_code/maxchelator/: CMC1002E.CCM  CMC1002E.TCM  CMC1002S.CCM  CMC1002S.TCM  CaMgATPEGTA-NIST.html
legacy_code/winmaxc/: CMCWAC.TCM  good.bcm  other.bcm  winmaxc32.hlp
src/: CationEngine.cpp  CationEngine.h  Constants.cpp  Constants.h  Ligand.h  LigandCSVLoader.cpp  LigandData.cpp  Solver.cpp  Solver.h  main.cpp
src/test/: SolverTest.cpp  test_runner.cpp
src/test/temp/: Ca_Mg_ATP_EGTA NIST w_pH Plot v2.2.html  test cases.xlsx
test/: CationEngineTest.cpp  ReferenceSolverTest.cpp  SolverTest.cpp  validation_suite.cpp  validation_suite_fixed.cpp
